rewrote task-1-1-2 after review